--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/tooplate-artxibition.css">
     <link rel="shortcut icon" href="./assets/images/KYdhrvyofdXsgQe.png" height="">
     <script src="https://kit.fontawesome.com/bb61281980.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/jpg" href="./assets/images/logo1.png"/>
     </head>    
     <body>    
     
