--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="index.html" class="logo">IGLESIA CRISTIANA TERRAZAS DEL VALLE</a> 
+                        <a href="index.html" class="logo">IGLESIA TERRAZAS DEL VALLE</a> 
 
                        
 
