--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             9. Dijo Dios: «Acumúlense las aguas de por debajo del firmamento en un solo conjunto, y déjese ver lo seco»; y así fue.                            
                             10. Y llamó Dios a lo seco «tierra», y al conjunto de las aguas lo llamó «mares»; y vio Dios que estaba bien.</p>
                         <br>
-                        <h4>3ra de Juan</h4>
+                        <h4>SALMO 100</h4>
                         <h6>Versiculo 1-5</h6>
                         <p>Cantad alegres a Dios, habitantes de toda la tierra.
 
@@ -305,7 +305,7 @@
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="#top"><img src="assets/images/coro_adultos.png" alt="" height="350px"></a>
+                            <a href="#top"><img src="assets/images/Mujeres liderez.jpg" alt="" height="350px"></a>
                         </div>
                         <div class="down-content">
                             <a href="event-details.html"><h4>Femenil cafecito y te </h4></a>
@@ -319,7 +319,7 @@
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="#top"><img src="assets/images/envivo.jpg" alt="" height="350px"></a>
+                            <a href="#top"><img src="assets/images/Miercoles.jpg" alt="" height="350px"></a>
                         </div>
                         <div class="down-content">
                             <a href="event-details.html"><h4>Servicio de Miercoles</h4></a>
@@ -339,8 +339,8 @@
                             <a href="event-details.html"><h4>El Aseo</h4></a>
                             <ul>
                                 <li><i class="fa fa-clock-o"></i> Esta semana le toca a:<br>
-                                    <br><strong>ARRIVA:</strong> Fam. Gonzalez Garcia.
-                                    <br><strong>ABAJO:</strong> Fam. Daniel Gonzalez.
+                                    <br><strong>ARRIVA:</strong> Fam. Guzman Castañeda.
+                                    <br><strong>ABAJO:</strong> Fam. Zagal Villa.
                                 </li>
                                   <li><div class="aseo">                                      
                                 </div>
@@ -369,11 +369,10 @@
                             <a href="#top"><img src="assets/images/stair_people.png" alt="" height="350px"></a>
                         </div>
                         <div class="down-content">
-                            <a href="event-details.html"><h4>Proximo refrigerio</h4></a>
+                            <a href="event-details.html"><h4>Discipulado</h4></a>
                             <ul>
-                                <li><i class="fa fa-clock-o"></i> 18 de Febrero</li>
-                                <P>Hermana Tania.</P>
-                                
+                                <li><i class="fa fa-clock-o"></i>SIN FECHA</li>
+                                <P>Pospuesto hasta nuevo aviso.</P>                                
                             </ul>
                         </div>
                     </div>
@@ -381,7 +380,7 @@
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="#top"><img src="assets/images/envivo.jpg" alt="" height="350px"></a>
+                            <a href="#top"><img src="assets/images/escuelita_entrada.png" alt="" height="350px"></a>
                         </div>
                         <div class="down-content">
                             <a href="event-details.html"><h4>Colecta</h4></a>
