--- a/index.html
+++ b/index.html
@@ -305,13 +305,16 @@
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="#top"><img src="assets/images/Mujeres liderez.jpg" alt="" height="350px"></a>
+                            <a href="#top"><img src="assets/images/Evento Transformadas.jpg" alt="" height="350px"></a>
                         </div>
                         <div class="down-content">
-                            <a href="event-details.html"><h4>Femenil cafecito y te </h4></a>
+                            <a href="event-details.html"><h4>Transformadas</h4></a>
                             <ul>
-                                <li><i class="fa fa-clock-o"></i> Sabado 2 de Marzo</li>
-                                <p>Pregunta a las hermanas este domingo..Enterate de las actividades.</p>
+                                <li><i class="fa fa-clock-o"></i> Viernes 5 y Sabado 6</li>
+                                <p>Retiro Femenil.</p>
+                                <p>Adultos <svg fill="#000000"  height="15px" wide="15px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M12.32 8a3 3 0 0 0-2-.7H5.63A1.59 1.59 0 0 1 4 5.69a2 2 0 0 1 0-.25 1.59 1.59 0 0 1 1.63-1.33h4.62a1.59 1.59 0 0 1 1.57 1.33h1.5a3.08 3.08 0 0 0-3.07-2.83H8.67V.31H7.42v2.3H5.63a3.08 3.08 0 0 0-3.07 2.83 2.09 2.09 0 0 0 0 .25 3.07 3.07 0 0 0 3.07 3.07h4.74A1.59 1.59 0 0 1 12 10.35a1.86 1.86 0 0 1 0 .34 1.59 1.59 0 0 1-1.55 1.24h-4.7a1.59 1.59 0 0 1-1.55-1.24H2.69a3.08 3.08 0 0 0 3.06 2.73h1.67v2.27h1.25v-2.27h1.7a3.08 3.08 0 0 0 3.06-2.73v-.34A3.06 3.06 0 0 0 12.32 8z"></path></g></svg>
+                                250 - Niños (8-5) <svg fill="#000000"  height="15px" wide="15px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M12.32 8a3 3 0 0 0-2-.7H5.63A1.59 1.59 0 0 1 4 5.69a2 2 0 0 1 0-.25 1.59 1.59 0 0 1 1.63-1.33h4.62a1.59 1.59 0 0 1 1.57 1.33h1.5a3.08 3.08 0 0 0-3.07-2.83H8.67V.31H7.42v2.3H5.63a3.08 3.08 0 0 0-3.07 2.83 2.09 2.09 0 0 0 0 .25 3.07 3.07 0 0 0 3.07 3.07h4.74A1.59 1.59 0 0 1 12 10.35a1.86 1.86 0 0 1 0 .34 1.59 1.59 0 0 1-1.55 1.24h-4.7a1.59 1.59 0 0 1-1.55-1.24H2.69a3.08 3.08 0 0 0 3.06 2.73h1.67v2.27h1.25v-2.27h1.7a3.08 3.08 0 0 0 3.06-2.73v-.34A3.06 3.06 0 0 0 12.32 8z"></path></g></svg>
+                                100</p>
                             </ul>
                         </div>
                     </div>
@@ -339,8 +342,8 @@
                             <a href="event-details.html"><h4>El Aseo</h4></a>
                             <ul>
                                 <li><i class="fa fa-clock-o"></i> Esta semana le toca a:<br>
-                                    <br><strong>ARRIVA:</strong> Fam. Guzman Castañeda.
-                                    <br><strong>ABAJO:</strong> Fam. Zagal Villa.
+                                    <br><strong>ARRIVA:</strong> Fam. Mtz Peralta.
+                                    <br><strong>ABAJO:</strong> Fam. Magallon.
                                 </li>
                                   <li><div class="aseo">                                      
                                 </div>
