--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="#top"><img src="assets/images/Evento Transformadas.jpg" alt="" height="350px"></a>
+                            <a href="#top"><img src="assets/images/EventoTransformadas.jpg" alt="" height="350px"></a>
                         </div>
                         <div class="down-content">
                             <a href="event-details.html"><h4>Transformadas</h4></a>
